# ichatbio-ncbi-agent

./: README.md  pyproject.toml
src/: agent.py  util.py
src/entrypoints/: find_sequence_records.py  get_sequence_record.py
tests/: conftest.py  test_agent.py
